--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
                     <archive>
                         <manifest>
                             <addClasspath>true</addClasspath>
-                            <mainClass>sk.kuzmisin.closurecompiler.XtbGeneratorRunner</mainClass>
+                            <mainClass>sk.kuzmisin.xtbgenerator.XtbGeneratorRunner</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
@@ -56,7 +56,7 @@
                             </descriptorRefs>
                             <archive>
                                 <manifest>
-                                    <mainClass>sk.kuzmisin.closurecompiler.XtbGeneratorRunner</mainClass>
+                                    <mainClass>sk.kuzmisin.xtbgenerator.XtbGeneratorRunner</mainClass>
                                 </manifest>
                             </archive>
                         </configuration>
